--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:id="@+id/scrollViewContainer"
+        android:layout_width="match_parent"
+        android:layout_height="550dp"
+        android:layout_above="@id/edtISBN"
+        android:layout_below="@id/txtBookInfo"
+        android:layout_marginBottom="15dp">
+
+        <ScrollView
+            android:id="@+id/bookScrollView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/vertLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="20dp">
+
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+
     <TextView
         android:id="@+id/txtBookInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/result"
-        android:textSize="35sp"
-        android:layout_centerHorizontal="true"/>
+        android:text="Enter or scan an ISBN number"
+        android:textSize="25sp"
+        android:layout_centerHorizontal="true"
+        android:padding="15dp"/>
 
     <TextView
         android:id="@+id/txtOr"
@@ -34,7 +59,8 @@
         android:importantForAutofill="no"
         android:inputType="number"
         android:layout_above="@+id/txtOr"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp"/>
 
     <Button
         android:id="@+id/btnSend"
@@ -46,7 +72,7 @@
         android:layout_toRightOf="@id/edtISBN"
         android:layout_above="@id/txtOr"
         android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="20dp"/>
 
     <Button
         android:id="@+id/btnScan"
@@ -59,12 +85,5 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"/>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imgBook"/>
-
-
 
 </RelativeLayout>
